<resources>
    <string name="app_name">Kadraj</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="somethings_wrong">Birşeyler yanlış gitti</string>
    <string name="user_already_exists">Bu kullanıcı zaten var</string>
    <string name="user_not_found">Kullanıcı bulunamadı</string>
    <string name="fill_in_the_blank">Lütfen boş alanları doldurunuz</string>
    <string name="user_information_wrong">Kullanıcı bilgileri hatalı</string>
    <string name="login_success">İşlem başarılı</string>
    <!-- UserFragment -->
    <string name="name">İsim</string>
    <string name="surname">Soyisim</string>
    <!-- Toolbar Title and Main Fragment -->
    <string name="photoFragmentTitle">Fotoğraflar</string>
    <string name="videoFragmentTitle">Videolar</string>
    <string name="mainPageTitle">Anasayfa</string>
    <string name="user">Kullanıcı</string>
    <string name="exit">Çıkış Yap</string>
    <!-- Login Fragment -->
    <string name="welcome">Hoşgeldiniz</string>
    <string name="password">Şifre</string>
    <string name="enter_username">Kullanıcı Adını Giriniz</string>
    <string name="enter_password">Şifrenizi Giriniz</string>
    <string name="remember_me">Beni Hatırla</string>
    <string name="login">Giriş Yap</string>
    <string name="sign_up">Kayıt Ol</string>
    <string name="passwords_not_equals">Parola eşleşmiyor</string>
    <string name="login_title">Giriş Sayfası</string>
    <string name="user_update_title">Kullanıcı Güncelleme</string>
    <string name="user_title">Kullanıcı Sayfası</string>
    <string name="register_title">Kayıt Ol</string>
    <string name="collections_title">Koleksiyon Sayfası</string>


</resources>